--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
-django==2.2
-djangorestframework
-requests
-djoser
-requests_oauthlib
+certifi==2020.4.5.1
+chardet==3.0.4
+dj-database-url==0.5.0
+Django==2.2
+django-templated-mail==1.1.1
+djangorestframework==3.11.0
+djoser==2.0.3
+gunicorn==20.0.4
+idna==2.9
+oauthlib==3.1.0
+psycopg2-binary==2.8.5
+pytz==2019.3
+requests==2.23.0
+requests-oauthlib==1.3.0
+sqlparse==0.3.1
+urllib3==1.25.8
+whitenoise==5.0.1
