--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,35 @@
 certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
+click==7.1.1
+ConfigArgParse==1.2.2
 dj-database-url==0.5.0
 Django==2.2
 django-templated-mail==1.1.1
 djangorestframework==3.11.0
 djoser==2.0.3
+Flask==1.1.2
+gevent==1.5a3
+geventhttpclient-wheels==1.3.1.dev2
+greenlet==0.4.15
 gunicorn==20.0.4
 idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.2
+locust==0.0
+locustio==0.14.5
+MarkupSafe==1.1.1
+msgpack==1.0.0
 oauthlib==3.1.0
+psutil==5.7.0
 psycopg2-binary==2.8.5
+pycparser==2.20
 pytz==2019.3
+pyzmq==19.0.0
 requests==2.23.0
 requests-oauthlib==1.3.0
+six==1.14.0
 sqlparse==0.3.1
 urllib3==1.25.8
+Werkzeug==1.0.1
 whitenoise==5.0.1
